Fix toast (need to test on Safari)

--- a/public/index.css
+++ b/public/index.css
@@ -160,18 +160,20 @@ a {
 
 /** Toast **/
 #toast {
-	color: white;
-	display: inline-block;
-	font-family: 'Arvo', 'sans-serif';
-	font-weight: 900;
-	left: 90%;
-	margin: 0 2%;
 	opacity: 0;
-	padding: 5px;
 	position: sticky;
 	position: -webkit-sticky; /** Safari **/
 	top: 100px;
 	z-index: 3;
+}
+
+#toast-message {
+	color: white;
+	display: inline-block;
+	font-family: 'Arvo', 'sans-serif';
+	font-weight: 900;
+	margin: 0 2%;
+	padding: 5px;
 }
 
 
